# hchip8

./: README.md  chip8.cabal
app/: BrickMain.hs  GlossMain.hs  Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.8.4/: chip8-0.1.0.0-inplace.conf  package.cache
resources/: dis.asm
src/: Atari2600.hs  Chip8.hs  Util.hs
test/: Main.hs
